# health_assistant

./: .gitignore  DESIGN_NOTES.md  LICENSE  README.md  pyproject.toml  readme.txt  requirement.txt  sample_questions.txt
document_upload_demo/: requirement.txt
document_upload_demo/app/: main.py
document_upload_demo/app/api/v1/: routes_ingestion.py
document_upload_demo/app/models/: document.py
document_upload_demo/app/services/: api_ingestor.py  file_ingestor.py  manual_text_ingestor.py
document_upload_demo/frontend/src/: index.html  script.js  style.css
health_agent/: main.py  mcp_server_config.json
health_agent_ui/: index.html
mcp_server/: data_conversion.py  doc_server.py  embedding_data.py
mcp_server/chroma_db1/: chroma.sqlite3
mcp_server/chroma_db2/: chroma.sqlite3
mcp_server/chroma_db3/a1c29adf-e754-4f8e-a67c-e3aff7405551/: index_metadata.pickle
mcp_server/processed_data/: document1.json  document2.json  document3.json  processed_document1.json  processed_document2.json  processed_document3.json
